--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,215 +1,24 @@
 ﻿<Window x:Class="SolyankaGuide.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Гид по «Народной Солянке»"
-        Height="720" Width="1280"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:SolyankaGuide"
+        mc:Ignorable="d"
+        AllowsTransparency="True"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
-        AllowsTransparency="True"
-        ResizeMode="NoResize">
-    <Window.Resources>
-        <CubicEase x:Key="CubicEaseOut"
-       EasingMode="EaseOut"/>
-        <CubicEase x:Key="CubicEaseIn"
-       EasingMode="EaseIn"/>
-        <Storyboard x:Key="ShowSidePanel">
-            <DoubleAnimation Storyboard.TargetName="SidePanelTransform" Storyboard.TargetProperty="X" To="0"
-                             Duration="0:0:0.25"
-                             EasingFunction="{StaticResource CubicEaseOut}"/>
-        </Storyboard>
-        <Storyboard x:Key="HideSidePanel">
-            <DoubleAnimation Storyboard.TargetName="SidePanelTransform" Storyboard.TargetProperty="X" To="-330"
-                             Duration="0:0:0.25"
-                             EasingFunction="{StaticResource CubicEaseIn}"/>
-        </Storyboard>
-        <Style x:Key="WindowControlButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Width" Value="40"/>
-            <Setter Property="Height" Value="35"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border x:Name="PART_Border" Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="PART_Border" Property="Background" Value="#4A4A4A"/>
-                            </Trigger>
-                            <Trigger Property="IsPressed" Value="True">
-                                <Setter TargetName="PART_Border" Property="Background" Value="#1A1A1A"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="NavToggleButtonStyle" TargetType="ToggleButton">
-            <Setter Property="Width" Value="130"/>
-            <Setter Property="Height" Value="34"/>
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Foreground" Value="#DDFFFFFF"/>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="HorizontalContentAlignment" Value="Center"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ToggleButton">
-                        <Grid>
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,-2,0,0"/>
-                            <Border x:Name="Underline" Height="2" Background="#666666" VerticalAlignment="Bottom" Margin="10,0,10,2"/>
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter TargetName="Underline"
-                                Property="Background"
-                                Value="#AAFFD700"/>
-                            </Trigger>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter Property="Foreground" Value="#FFD700"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter TargetName="Underline"
-                                Property="Background"
-                                Value="#FFD700"/>
-                            </Trigger>
-
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="SideNavRadioButtonStyle"
-   TargetType="RadioButton">
-            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-            <Setter Property="Height" Value="32"/>
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Foreground" Value="#DDFFFFFF"/>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="HorizontalContentAlignment" Value="Left"/>
-            <Setter Property="Padding" Value="8,0"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="RadioButton">
-                        <Border Background="Transparent">
-                            <ContentPresenter VerticalAlignment="Center"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Foreground" Value="White"/>
-                            </Trigger>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter Property="Foreground" Value="#FFD700"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </Window.Resources>
+        ResizeMode="NoResize"
+        Title="MainWindow" Height="720" Width="1280">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Image Grid.RowSpan="3" Source="/Assets/Images/solyanka.jpg" Stretch="UniformToFill"/>
-        <Border x:Name="TitleBar" Grid.Row="0" Background="#CC2C2C2C" MouseLeftButtonDown="TitleBar_MouseLeftButtonDown">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Гид по «Народной Солянке»" Foreground="White" FontSize="20" FontWeight="Bold"
-                           VerticalAlignment="Center"
-                           Margin="10,0,0,0"/>
-                <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <Button Content="—" Style="{StaticResource WindowControlButtonStyle}" Click="MinimizeButton"/>
-                    <Button Content="☐" Style="{StaticResource WindowControlButtonStyle}" Click="ResizeButton"/>
-                    <Button Content="✕" Style="{StaticResource WindowControlButtonStyle}" Click="CloseButton"/>
-                </StackPanel>
-            </Grid>
-        </Border>
-        <Border Grid.Row="1" Background="#AA1A1A1A">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <ToggleButton Content="Помощник" Style="{StaticResource NavToggleButtonStyle}" Click="Helper"/>
-                <Border Width="1" Height="20" Background="#66AAAAAA" Margin="5,0"/>
-                <ToggleButton Content="Персонажи" Style="{StaticResource NavToggleButtonStyle}" Click="Characters"/>
-                <Border Width="1" Height="20" Background="#66AAAAAA" Margin="5,0"/>
-                <ToggleButton Content="Предметы" Style="{StaticResource NavToggleButtonStyle}" Click="Items"/>
-                <Border Width="1" Height="20" Background="#66AAAAAA" Margin="5,0"/>
-                <ToggleButton Content="Квесты" Style="{StaticResource NavToggleButtonStyle}" Click="Quests"/>
-                <Border Width="1" Height="20" Background="#66AAAAAA" Margin="5,0"/>
-                <ToggleButton Content="ЧаВо" Style="{StaticResource NavToggleButtonStyle}" Click="FAQ"/>
-            </StackPanel>
-        </Border>
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="70"/>
-            </Grid.ColumnDefinitions>
-            <Border x:Name="SidePanel" Grid.Column="0" Background="#EE1A1A1A" HorizontalAlignment="Left">
-                <Border.RenderTransform>
-                    <TranslateTransform x:Name="SidePanelTransform" X="-330"/>
-                </Border.RenderTransform>
-                <StackPanel x:Name="SidePanelButtonsPanel" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Stretch"
-                            Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Border}}"/>
-            </Border>
-            <ContentControl x:Name="Topic" Visibility="Hidden" Grid.Column="1" Background="#99000000" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10,10,0,0">
-                <Border Background="#AA1A1A1A" CornerRadius="10" Padding="20" HorizontalAlignment="Stretch" Margin="0,0,0,10">
-                    <Grid x:Name="DescriptionPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Image x:Name="DescriptionImage" VerticalAlignment="Top" Grid.Row="0"/>
-                        <TextBlock x:Name="DescriptionHeader" Grid.Row="1" HorizontalAlignment="Stretch" Foreground="Yellow" FontSize="24" TextWrapping="Wrap" TextAlignment="Center" FontWeight="Bold"/>
-                        <ScrollViewer x:Name="DescriptionScrollViewer" Grid.Row="2" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
-                    </Grid>
-                </Border>
-            </ContentControl>
-            <ContentControl x:Name="SubList" Visibility="Hidden" Grid.Column="1" Background="#00000000" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10,10,0,0">
-                <ScrollViewer VerticalScrollBarVisibility="Disabled" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                    <StackPanel x:Name="SubGrid" Orientation="Horizontal" HorizontalAlignment="Stretch" Height="Auto"/>
-                </ScrollViewer>
-            </ContentControl>
-            <Border x:Name="LinksBorder" Grid.Column="2" Background="#00000000" HorizontalAlignment="Right">
-                <StackPanel x:Name="LinksPanel" Margin="0,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Stretch"
-                            Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Border}}">
-                    <Button Width="50" Height="50" Click="DiscordLink" BorderThickness="0" Cursor="Hand" Margin="0,0,0,10">
-                        <Button.Template>
-                            <ControlTemplate TargetType="Button">
-                                <Border Background="#7289DA" CornerRadius="25">
-                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                </Border>
-                            </ControlTemplate>
-                        </Button.Template>
-                        <Image Source="/Assets/Images/discord.png" Stretch="Uniform" Width="50" Height="50" Cursor=""/>
-                    </Button>
-                    <Button Width="50" Height="50" Click="YoutubeLink" BorderThickness="0" Cursor="Hand">
-                        <Button.Template>
-                            <ControlTemplate TargetType="Button">
-                                <Border Background="#7289DA" CornerRadius="25">
-                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                </Border>
-                            </ControlTemplate>
-                        </Button.Template>
-                        <Image Source="/Assets/Images/yt.png" Stretch="Uniform" Width="50" Height="50"/>
-                    </Button>
-                </StackPanel>
-            </Border>
-        </Grid>
+        <Image Grid.RowSpan="3" Source="/Assets/Images/background.jpg" Stretch="UniformToFill"/>
+        <local:TitleControl Grid.Row="0"/>
+        <local:CatergoriesControl Grid.Row="1"/>
+        <local:GuideControl Grid.Row="2"/>
     </Grid>
 </Window>
