--- a/DescriptionGridControl.xaml
+++ b/DescriptionGridControl.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#99000000" CornerRadius="10" Margin="15,15,5,15">
         <ScrollViewer VerticalScrollBarVisibility="Disabled" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Padding="15,0,15,0">
-            <WrapPanel x:Name="Descriptions" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <WrapPanel x:Name="Descriptions" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
         </ScrollViewer>
     </Border>
 </UserControl>
