--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,13 +8,12 @@
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         ResizeMode="CanResize"
-        Title="Гид по «Народной Солянке» OGSR 2026" Height="720" Width="1280">
+        Title="Гид по «Народной Солянке» OGSR 2026"
+        FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman"
+        Height="720"
+        Width="1280">
     <WindowChrome.WindowChrome>
-        <WindowChrome
-        CaptionHeight="36"
-        ResizeBorderThickness="6"
-        GlassFrameThickness="0"
-        UseAeroCaptionButtons="False"/>
+        <WindowChrome CaptionHeight="36" ResizeBorderThickness="6" GlassFrameThickness="0" UseAeroCaptionButtons="False" CornerRadius="5"/>
     </WindowChrome.WindowChrome>
     <Grid>
         <Grid.RowDefinitions>
@@ -25,10 +24,47 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Image x:Name="BGImage" Grid.RowSpan="5" Stretch="UniformToFill"/>
-        <local:TitleControl Grid.Row="0"/>
         <Border Grid.Row="1" Background="#33FFFFFF"/>
         <local:CatergoriesControl Grid.Row="2"/>
         <Border Grid.Row="3" Background="#33FFFFFF"/>
         <local:GuideControl Grid.Row="4"/>
+        <Image x:Name="OverrideImage" Grid.RowSpan="5" Stretch="UniformToFill"/>
+        <Grid x:Name="UpdateGrid" Background="Transparent" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.RowSpan="5" Visibility="Hidden" Width="270">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="90"/>
+            </Grid.RowDefinitions>
+            <Border Grid.RowSpan="4" Background="#CC000000" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" CornerRadius="10"/>
+            <TextBlock x:Name="UpdateText" Grid.Row="0" Text="Update?" VerticalAlignment="Top" Margin="10,0,10,0" HorizontalAlignment="Stretch" TextAlignment="Center" FontSize="24" Foreground="White" TextWrapping="Wrap"/>
+
+            <Grid Width="100" Height="100" Grid.Row="1">
+                <Path Stroke="DodgerBlue" StrokeThickness="6" StrokeStartLineCap="Round" StrokeEndLineCap="Round" Data="M50,6 A44,44 0 0 1 94,50" RenderTransformOrigin="0.5,0.5">
+                    <Path.RenderTransform>
+                        <RotateTransform x:Name="Rotate"/>
+                    </Path.RenderTransform>
+                    <Path.Triggers>
+                        <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                            <BeginStoryboard>
+                                <Storyboard RepeatBehavior="Forever">
+                                    <DoubleAnimation Storyboard.TargetName="Rotate" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:2" RepeatBehavior="Forever"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Path.Triggers>
+                </Path>
+            </Grid>
+            <TextBlock x:Name="UpdateStatus" Grid.Row="2" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Stretch" TextAlignment="Center" FontSize="24" Foreground="White" TextWrapping="Wrap"/>
+            <Grid Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10, 0, 0, 10" Background="Transparent" Height="70" Width="100">
+                <Image Source="/Internals/Images/btn.png" MouseDown="Update"/>
+                <TextBlock x:Name="UpdateYes" HorizontalAlignment="Stretch" VerticalAlignment="Center" FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman" TextAlignment="Center" Foreground="Yellow" FontSize="24" FontWeight="Bold" IsHitTestVisible="False"/>
+            </Grid>
+            <Grid Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0, 0, 10, 10" Background="Transparent" Height="70" Width="100">
+                <Image Source="/Internals/Images/btn.png" MouseDown="NoUpdate"/>
+                <TextBlock x:Name="UpdateNo" HorizontalAlignment="Stretch" VerticalAlignment="Center" FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman" TextAlignment="Center" Foreground="Yellow" FontSize="24" FontWeight="Bold" IsHitTestVisible="False"/>
+            </Grid>
+        </Grid>
+        <local:TitleControl Grid.Row="0"/>
     </Grid>
 </Window>
