--- a/TitleControl.xaml
+++ b/TitleControl.xaml
@@ -39,7 +39,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Text="Гид по «Народной Солянке» OGSR 2026" FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman"  Foreground="White" FontSize="20" FontWeight="Bold" VerticalAlignment="Center" Margin="10,0,0,2"/>
+            <TextBlock x:Name="TitleText" FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman"  Foreground="White" FontSize="20" FontWeight="Bold" VerticalAlignment="Center" Margin="10,0,0,2"/>
             <StackPanel x:Name="ButtonsPanel" Grid.Column="1" Orientation="Horizontal">
                 <Button FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman" Style="{StaticResource WindowControlButtonStyle}" Click="MinimizeButton">
                     <Path Data="M0,6 L12,6" Stroke="White" StrokeThickness="2" Width="14" Height="12"/>
