--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -39,7 +39,7 @@
             <Border Grid.RowSpan="4" Background="#CC000000" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" CornerRadius="10"/>
             <TextBlock x:Name="UpdateText" Grid.Row="0" Text="Update?" VerticalAlignment="Top" Margin="10,0,10,0" HorizontalAlignment="Stretch" TextAlignment="Center" FontSize="24" Foreground="White" TextWrapping="Wrap"/>
 
-            <Grid Width="100" Height="100" Grid.Row="1">
+            <Grid x:Name="UpdateSpinner" Width="100" Height="100" Grid.Row="1" Visibility="Hidden">
                 <Path Stroke="DodgerBlue" StrokeThickness="6" StrokeStartLineCap="Round" StrokeEndLineCap="Round" Data="M50,6 A44,44 0 0 1 94,50" RenderTransformOrigin="0.5,0.5">
                     <Path.RenderTransform>
                         <RotateTransform x:Name="Rotate"/>
@@ -55,7 +55,7 @@
                     </Path.Triggers>
                 </Path>
             </Grid>
-            <TextBlock x:Name="UpdateStatus" Grid.Row="2" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Stretch" TextAlignment="Center" FontSize="24" Foreground="White" TextWrapping="Wrap"/>
+            <TextBlock x:Name="UpdateStatus" Visibility="Hidden" Grid.Row="2" VerticalAlignment="Center" Margin="10" HorizontalAlignment="Stretch" TextAlignment="Center" FontSize="24" Foreground="White" TextWrapping="Wrap"/>
             <Grid Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10, 0, 0, 10" Background="Transparent" Height="70" Width="100">
                 <Image Source="/Internals/Images/btn.png" MouseDown="Update"/>
                 <TextBlock x:Name="UpdateYes" HorizontalAlignment="Stretch" VerticalAlignment="Center" FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman" TextAlignment="Center" Foreground="Yellow" FontSize="24" FontWeight="Bold" IsHitTestVisible="False"/>
