--- a/App.xaml
+++ b/App.xaml
@@ -3,5 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SolyankaGuide"
              StartupUri="MainWindow.xaml">
-    <Application.Resources/>
+    <Application.Resources>
+        <local:ThreeColumnConverter x:Key="ThreeColumnConverter"/>
+        <local:AspectRatioConverter x:Key="AspectRatioConverter"/>
+    </Application.Resources>
 </Application>
