--- a/GriddedDescription.xaml
+++ b/GriddedDescription.xaml
@@ -5,17 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SolyankaGuide"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="640">
-    <Viewbox x:Name="ViewBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Stretch="Uniform">
-        <Border Background="#99404040" CornerRadius="5" Padding="20, 20, 20, 10">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="9*"/>
-                    <RowDefinition Height="5*"/>
-                </Grid.RowDefinitions>
-                <Image x:Name="Image" Grid.Row="0" Source="/Internals/Images/placeholder.png" HorizontalAlignment="Stretch"/>
-                <TextBlock x:Name="TileName" Grid.Row="1" Text="Принести флешку торговцу" HorizontalAlignment="Stretch" TextAlignment="Center" FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman" FontSize="24" FontWeight="Bold" Foreground="Yellow" Background="#00000000"/>
-            </Grid>
-        </Border>
-    </Viewbox>
+             VerticalAlignment="Top"
+             Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=WrapPanel}, Converter={StaticResource ThreeColumnConverter}}"
+             Height="{Binding Width, RelativeSource={RelativeSource Self}, Converter={StaticResource AspectRatioConverter}}">
+    <Border Background="#99404040" CornerRadius="5" Padding="10, 10, 10, 5">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Image x:Name="Image" Grid.Row="0" Source="/Internals/Images/placeholder.png" HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="Fill"/>
+            <TextBlock x:Name="TileName" TextWrapping="Wrap" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" TextAlignment="Center" FontFamily="Segoe UI, Noto Sans, Arial, Times New Roman" FontSize="20" FontWeight="Bold" Foreground="Yellow" Background="#00000000"/>
+        </Grid>
+    </Border>
 </UserControl>
