--- a/DescriptionControl.xaml
+++ b/DescriptionControl.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SolyankaGuide"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             PreviewKeyDown="UserControl_PreviewKeyDown"
+             Focusable="True">
     <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#99000000" CornerRadius="10" Padding="20" Margin="15,15,5,10">
         <Grid>
             <Grid.RowDefinitions>
