--- a/GuideControl.xaml
+++ b/GuideControl.xaml
@@ -93,7 +93,7 @@
                             </Border>
                         </ControlTemplate>
                     </Button.Template>
-                    <Image Source="/Internals/Images/vk.jpg" Stretch="Uniform" Width="50" Height="50" Cursor=""/>
+                    <Image Source="/Internals/Images/vk.png" Stretch="Uniform" Width="50" Height="50" Cursor=""/>
                 </Button>
                 <Button Width="50" Height="50" Click="DiscordLink" BorderThickness="0" Cursor="Hand" Margin="0,0,0,10">
                     <Button.Template>
@@ -103,7 +103,7 @@
                             </Border>
                         </ControlTemplate>
                     </Button.Template>
-                    <Image Source="/Internals/Images/discord.jpg" Stretch="Uniform" Width="50" Height="50" Cursor=""/>
+                    <Image Source="/Internals/Images/discord.png" Stretch="Uniform" Width="50" Height="50" Cursor=""/>
                 </Button>
                 <Button Width="50" Height="50" Click="YoutubeLink" BorderThickness="0" Cursor="Hand">
                     <Button.Template>
@@ -113,7 +113,7 @@
                             </Border>
                         </ControlTemplate>
                     </Button.Template>
-                    <Image Source="/Internals/Images/yt.jpg" Stretch="Uniform" Width="50" Height="50"/>
+                    <Image Source="/Internals/Images/yt.png" Stretch="Uniform" Width="50" Height="50"/>
                 </Button>
             </StackPanel>
         </Border>
